# app/Http/Controllers/Annotations/AuthentificationAnnotationController.php
@@ -26,6 +26,25 @@ namespace App\Http\Controllers\Annotations ;
  *
 
  * @OA\POST(
+ *     path="/api/check-unique",
+ *     summary="verifier si l'email est unique",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="201", description="Created successfully"),
+ * @OA\Response(response="400", description="Bad Request"),
+ * @OA\Response(response="401", description="Unauthorized"),
+ * @OA\Response(response="403", description="Forbidden"),
+ *     @OA\Parameter(in="path", name="email", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     tags={"Authentification"},
+*),
+
+
+ * @OA\POST(
  *     path="/api/auth/verifier-otp",
  *     summary="verification par otp",
  *     description="",
