# app/Http/Controllers/Annotations/GestioncommanderAnnotationController.php
@@ -26,6 +26,22 @@ namespace App\Http\Controllers\Annotations ;
  *
 
  * @OA\GET(
+ *     path="/api/toutlescommande",
+ *     summary="liste de tout les commandes",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="200", description="OK"),
+ * @OA\Response(response="404", description="Not Found"),
+ * @OA\Response(response="500", description="Internal Server Error"),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     tags={"gestion  commander"},
+*),
+
+
+ * @OA\GET(
  *     path="/api/historiqueCommande",
  *     summary="historique",
  *     description="",
